# eurobench_benchmarking_software

./: .gitignore  README.md  requirements.txt
eurobench_benchmark_core/: CMakeLists.txt  package.xml  setup.py
eurobench_benchmark_core/config/: beast.rviz  general.yaml
eurobench_benchmark_core/config/beast_conditions/: condition_1.yaml  condition_2.yaml  condition_3.yaml  condition_4.yaml  condition_5.yaml  condition_6.yaml  condition_7.yaml  condition_8.yaml
eurobench_benchmark_core/config/benchmark_config/: BEAST.yaml  MADROB.yaml
eurobench_benchmark_core/config/madrob_conditions/: condition_10.yaml  condition_11.yaml  condition_12.yaml  condition_13.yaml  condition_14.yaml  condition_15.yaml  condition_16.yaml  condition_17.yaml  condition_18.yaml  condition_19.yaml  condition_2.yaml  condition_20.yaml  condition_3.yaml  condition_4.yaml  condition_5.yaml  condition_6.yaml  condition_7.yaml  condition_8.yaml  condition_9.yaml
eurobench_benchmark_core/launch/: beast.launch  beast_all.launch  beast_bms.launch  beast_cart_gui.launch  beast_cart_onboard.launch  beast_gui.launch  beast_onboard.launch  beast_walker_gui.launch  beast_walker_onboard.launch  madrob.launch  madrob_all.launch  madrob_gui.launch  madrob_onboard.launch
eurobench_benchmark_core/scripts/: beast_cart_live_benchmark.sh  beast_install_BMS_dependences_onboard_PC.sh  beast_walker_live_benchmark.sh  live_benchmark.sh  madrob_install_BMS_dependences_GUI_PC.sh  madrob_install_BMS_dependences_onboard_PC.sh  madrob_live_benchmark.sh
eurobench_benchmark_core/src/: benchmark.py  benchmark_core.py  bms_utils.py
eurobench_benchmark_core/src/benchmark_scripts/performance/: base_performance.py
eurobench_benchmark_core/src/benchmark_scripts/performance/madrob/: door_handle_smoothness.py  door_occupation_time.py  execution_time.py  passage_time.py  roughness_of_door_actuation.py  smoothness_of_door_actuation.py  time_to_handle.py  unsafety_of_door_operation.py
eurobench_benchmark_core/src/benchmark_scripts/preprocess/: base_preprocess.py  madrob_passage_proof_of_concept.py  preprocess.py  preprocess_utils.py
eurobench_benchmark_core/src/benchmark_scripts/preprocess/beast/: beast_events.py  beast_handle_wrench.py  handle_force.py  landmark_trajectories.py  obstacles_distance.py  obstacles_range.py
eurobench_benchmark_core/src/benchmark_scripts/preprocess/madrob/: __init__.py  door_angle.py  door_angular_acceleration.py  door_angular_velocity.py  door_velocity.py  events_sequence.py  handle_force.py  madrob_door_joint_state.py  madrob_events.py  madrob_handle_wrench.py
eurobench_benchmark_core/src/benchmark_scripts/testbed_comm/: beast_testbed_comm.py  madrob_testbed_comm.py
eurobench_benchmark_server/: CMakeLists.txt  README.md  package.xml  setup.py
eurobench_benchmark_server/config/: general.yaml
eurobench_benchmark_server/launch/: beast.launch  benchmark_server.launch  madrob.launch  madrob_all.launch
eurobench_benchmark_server/msg/: BenchmarkServerState.msg
eurobench_benchmark_server/sensor_bags/: door_laser_off_on_off.bag
eurobench_benchmark_server/src/: base_benchmark.py  benchmark.py  benchmark_server.py  madrob_door_control.py
eurobench_benchmark_server/src/benchmark_config/: MADROB.yaml  MADROB_TEST.yaml  MADROB_TRAVERSAL.yaml  TEST_BENCHMARK.yaml
eurobench_benchmark_server/src/benchmark_scripts/: example_benchmark.py
eurobench_benchmark_server/src/benchmark_scripts/beast/: __init__.py  beast_test.py  beast_test_benchmark.py
eurobench_benchmark_server/src/benchmark_scripts/madrob/: madrob_test.py  madrob_test_benchmark.py  madrob_traversal.py
eurobench_benchmark_server/src/benchmark_scripts/performance/: base_performance.py
eurobench_benchmark_server/src/benchmark_scripts/performance/madrob/: door_handle_smoothness.py
eurobench_benchmark_server/src/benchmark_scripts/preprocess/: madrob_preprocess.py
eurobench_benchmark_server/src/benchmark_scripts/testbed_comm/: base_testbed_comm.py  madrob_testbed_comm.py
eurobench_benchmark_server/srv/: BenchmarkServerSettings.srv  MadrobBenchmarkType.srv  MadrobSettings.srv  StartBenchmark.srv
eurobench_bms_msgs_and_srvs/: CMakeLists.txt  package.xml
eurobench_bms_msgs_and_srvs/msg/: BenchmarkCoreState.msg  BenchmarkServerState.msg
eurobench_bms_msgs_and_srvs/srv/: BeastBenchmarkParams.srv  BenchmarkCoreRobotNames.srv  MadrobBenchmarkParams.srv  PlayRosbag.srv  StartBenchmark.srv  StartRecording.srv
eurobench_rosbag_controller/: CMakeLists.txt  package.xml
eurobench_rosbag_controller/launch/: controller.launch
eurobench_rosbag_controller/scripts/: eurobench_rosbag_controller.py
eurobench_rosbag_recorder/: CMakeLists.txt  package.xml
eurobench_rosbag_recorder/launch/: recorder.launch
eurobench_rosbag_recorder/scripts/: eurobench_rosbag_recorder.py
gui/beast_settings_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
gui/beast_settings_gui/launch/: beast_settings_gui.launch
gui/beast_settings_gui/scripts/: beast_settings_gui
gui/beast_settings_gui/src/beast_settings_gui/: beast_settings_gui.py  beast_settings_gui.ui
gui/benchmark_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
gui/benchmark_gui/launch/: beast_gui.launch  madrob_gui.launch  madrob_sensors_gui.launch
gui/benchmark_gui/perspectives/: BEAST.perspective  MADROB.perspective  MADROB_sensors.perspective
gui/benchmark_gui/scripts/: benchmark_gui
gui/benchmark_gui/src/benchmark_gui/: benchmark_gui.py  benchmark_gui.ui
gui/madrob_settings_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
gui/madrob_settings_gui/launch/: madrob_settings_gui.launch
gui/madrob_settings_gui/scripts/: madrob_settings_gui
gui/madrob_settings_gui/src/madrob_settings_gui/: madrob_settings_gui.py  madrob_settings_gui.ui
