<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>eurobench_benchmark_server</name>
  <version>0.0.0</version>
  <description>The eurobench_benchmark_server package</description>

  <maintainer email="95joaopereira@gmail.com">João Manuel Pereira</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>std_srvs</depend>
  <depend>madrob_msgs</depend>
  <depend>madrob_srvs</depend>
  <depend>eurobench_bms_msgs_and_srvs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
