<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>benchmark_gui</name>
  <version>0.0.0</version>
  <description>benchmark_gui provides a GUI plugin to run EUROBENCH benchmarks MADROB and BEAST</description>

  <maintainer email="95joaopereira@gmail.com">João Manuel Pereira</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>beast_msgs</depend>
  <depend>beast_srvs</depend>
  <depend>madrob_msgs</depend>
  <depend>madrob_srvs</depend>
  <depend>eurobench_bms_msgs_and_srvs</depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
